--- a/starter-code/styles/base.css
+++ b/starter-code/styles/base.css
@@ -6,3 +6,9 @@ body {
 	font-family: sans-serif;
 	min-width: 300px;
 }
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
